--- a/react-app/src/about.css
+++ b/react-app/src/about.css
@@ -1,9 +1,9 @@
 .container > h1{
-    font-size: 3vw;
+    font-size: min(6vw, 6vh);
   }
   
 .center > h2{
-    font-size: 2vw !important;
+    font-size: min(4vw, 4vh);
     font-weight: 600;
     margin-top: 1.5vw;
     margin-bottom: 1.5vw;
@@ -13,10 +13,13 @@
 .container{
     display: flex;
     margin-top:-3vh;
+    /*
     margin-right:5%;
-    margin-left: 5%;
-    width:30%;
-    height:30vw;
+    margin-left: 5%;*/
+
+    width: min(60vw, 60vh);
+    height: min(60vw, 60vh);
+
     background-color: #0d0f11;
     text-align: left;
     justify-content: center;
