--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -28,6 +28,14 @@ code {
   text-align: center;
   color: white;
 
+  background-image: url("./ppppppp.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+
+  width: 100%;
+  height: 130vh;
+
 }
 
 .rightSideMonkey{
@@ -36,9 +44,11 @@ code {
   width:30%;
   left:60%;
   top:8%;
+  
 }
 .rightSideMonkey > h1{
-  font-size: 7vw;
+  font-size: min(16vh, 16vw);
+  direction: rtl;
 }
 
 
@@ -46,12 +56,15 @@ code {
   position: absolute;
   text-align: center;
   width:30%;
-  left:70%;
+  left:67%;
   top:43%;
+  white-space: nowrap;
+
 }
 
 .rightSideMonkey2 > h2{
-  font-size: 3vw;
+  font-size: min(7vh, 7vw);
+  direction: rtl;
 }
 
 .bottomSideMonkey{
@@ -64,14 +77,14 @@ code {
 }
 
 .buttonMonkey{
-  font-size : 1.5vw;
+  font-size : min(3vw, 3vh);
   font-weight: 600;
   font-family: 'Segoe UI';
 
   margin-left: 2vw;
   margin-top: 1.5vw;
-  width : 13vw;
-  height : 4vw;
+  width : min(26vh, 26vw);
+  height : min(8vh, 8vh);
   border:none;
   
 }
@@ -105,4 +118,8 @@ h2{
   font-weight: 700 !important;
 
   color:white;
+}
+
+html {
+  scroll-behavior: smooth;
 }
