--- a/react-app/src/slideshow/slideshow.css
+++ b/react-app/src/slideshow/slideshow.css
@@ -86,8 +86,11 @@ button{
 }
 
 .image{
-  width : 75%;
-  height: 100%;
+  width : min(150vh, 150vw);
+  height: min(80vh, 60vw);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .backgroundborder{
@@ -102,7 +105,8 @@ button{
 }
 
 .content{
-  width:25%;
+  width: min(50vh, 50vw);
+  height: min(80vh, 60vw);
   background-color: #0d0f11;
   color: white;
   padding-left: 1vw;
@@ -132,6 +136,9 @@ button{
 .buttonContent > h2{
   font-size: 3vw !important;
   color: white;
+  padding:0px;
+  margin: 0px;
+  margin-bottom: 0.5vw;
 }
 
 .content > .top{
@@ -141,7 +148,6 @@ button{
   justify-content: center;
   align-items: center;
   text-align: center;
-  /*background-color: turquoise;*/
 }
 
 .content > .middle{
@@ -151,11 +157,15 @@ button{
   display: flex;
   justify-content: center;
   align-items: center;
-  /*background-color: violet;*/
+  padding-left: 0px;
 }
 
 .content > .middle p {
-  font-size: 1.3vw;
+  font-size: max(1.3vw, 1.1vh);
+  margin-left: 1vw;
+  margin-right: 1vw;
+  margin-bottom: 0px;
+  margin-top: 0px;
 }
 
 .content > .bottom{
@@ -170,7 +180,7 @@ button{
 .top > .text{
   margin-top: 0vw;
   margin-bottom: 0vw;
-  font-size: 3vw;
+  font-size: max(3vw, 3vh);
   font-weight: 900;
   color: #d9111c;
 }
