--- a/react-app/src/weirdAssBottomBit.css
+++ b/react-app/src/weirdAssBottomBit.css
@@ -2,8 +2,31 @@
     width:100%;
     height:15vh;
     background-color: #d9111c;
+    display: flex;
+    margin-right: 50vw;
+    align-items: center;
+    position:relative;
 }
 
-h1{
-    margin-top: 0px;
+p{
+    padding-bottom: 0px;
+    padding: 0px;
+    font-size: min(4vw,4vh);
+    color:white;
+    margin-left: 5%;
+}
+
+.buttonToTop{
+    width: min(20vw, 20vh);
+    height: min(6vw, 6vh);
+    border: 0px;
+    font-size:1.5vw;
+    direction: rtl;
+    margin-right: 1vw;
+}
+
+.moveToRight{
+    width: 75%;
+    display: flex;
+    justify-content: flex-end;
 }
